--- a/package.json
+++ b/package.json
@@ -3,28 +3,28 @@
   "version": "1.0.0",
   "description": "",
   "keywords": [],
-  "main": "src/index.tsx",
+  "main": "src/index.js",
   "dependencies": {
+    "d3": "7.9.0",
+    "leaflet": "1.9.4",
+    "lucide-react": "0.475.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-scripts": "^5.0.0",
-    "lucide-react": "0.475.0",
-    "tailwindcss": "4.0.4",
-    "postcss": "8.5.1",
-    "autoprefixer": "10.4.20",
-    "d3": "7.9.0",
     "react-leaflet": "5.0.0",
-    "leaflet": "1.9.4"
+    "react-scripts": "^5.0.0"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.7",
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
+    "autoprefixer": "10.4.16",
+    "cssnano": "^6.0.1",
     "loader-utils": "3.2.1",
-    "typescript": "5.7.2",
     "lucide-react": "0.475.0",
-    "tailwindcss": "4.0.4",
-    "postcss": "8.5.1",
-    "autoprefixer": "10.4.20"
+    "postcss": "8.4.31",
+    "postcss-import": "^15.1.0",
+    "tailwindcss": "3.3.0",
+    "typescript": "5.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
